# Rust-Practice

./: .gitignore  Cargo.toml
session_10/: Cargo.toml  p2_data.csv
session_1_9/: Cargo.toml
session_1_9/src/: lib.rs
session_1_9/src/group/: g1.rs  mod.rs
src/: helpers.rs
