[package]
name = "session_1_9"
version = "0.0.1"
authors = ["Yeong <pjkfckr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# add module
[lib]
name = "demo"
path = "src/lib.rs"

[dependencies]
humantime = "2.1.0"
chrono = "0.4.23"
